Update Sonar Config to specify test project pattern

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.projectDescription=.NET component that parses IL to compute dependencies b
 
 sources=.
 sonar.language=cs
+visual.test.project.pattern=*.Test
