Add POM to be able to compile from CI server thanks to .Net Maven Plugin

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=org.codehaus.sonar-plugins.dotnet.tools.dependency-parser
+sonar.projectKey=org.codehaus.sonar-plugins.dotnet.tools:dependency-parser
 sonar.projectName=.NET Dependency Parser
 sonar.projectVersion=0.1-SNAPSHOT
 sonar.projectDescription=.NET component that parses IL to compute dependencies between classes
 
 sources=.
 sonar.language=cs
-visual.test.project.pattern=*.Test
+sonar.donet.visualstudio.testProjectPattern=*.Test
