Update to new name NDeps

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=org.codehaus.sonar-plugins.dotnet.tools:dependency-parser
-sonar.projectName=.NET Dependency Parser
+sonar.projectKey=org.codehaus.sonar-plugins.dotnet.tools:ndeps
+sonar.projectName=NDeps
 sonar.projectVersion=1.2-SNAPSHOT
 sonar.projectDescription=.NET component that parses IL to compute dependencies between classes
 
