--- a/DependencyParser.Test/DependencyParser.Test.csproj
+++ b/DependencyParser.Test/DependencyParser.Test.csproj
@@ -36,6 +36,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Mono.Cecil">
+      <HintPath>..\packages\Mono.Cecil.0.9.5.4\lib\net40\Mono.Cecil.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.6.2.12296, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
@@ -49,13 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DependencyParserTest.cs" />
+    <Compile Include="Lcom4AnalyzerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DependencyParser\DependencyParser.csproj">
-      <Project>{AE47EF64-9F61-463A-9088-79907968A1FE}</Project>
-      <Name>DependencyParser</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="testdata\Example.Core.dll">
@@ -70,6 +68,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DependencyParser\DependencyParser.csproj">
+      <Project>{AE47EF64-9F61-463A-9088-79907968A1FE}</Project>
+      <Name>DependencyParser</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
