--- a/DependencyParser/packages.config
+++ b/DependencyParser/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Mono.Cecil" version="0.9.5.4" targetFramework="net35-Client" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net35-Client" />
+	<package id="Mono.Gendarme" version="2.11.0.20121120" targetFramework="net35-Client" />
 </packages>
