--- a/DependencyParser/DependencyParser.csproj
+++ b/DependencyParser/DependencyParser.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Lcom4Analyzer.cs" />
+    <Compile Include="Lcom4Writer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
