--- a/DependencyParser/DependencyParser.csproj
+++ b/DependencyParser/DependencyParser.csproj
@@ -78,10 +78,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DethOfInheritanceTreeAnalyzer.cs" />
     <Compile Include="Lcom4Analyzer.cs" />
-    <Compile Include="Lcom4Writer.cs" />
+    <Compile Include="DesignMeasuresWriter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResponseForClassAnalyzer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
