--- a/DependencyParser.Test/DependencyParser.Test.csproj
+++ b/DependencyParser.Test/DependencyParser.Test.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DependencyAnalyzerTest.cs" />
     <Compile Include="DependencyParserTest.cs" />
     <Compile Include="DethOfInheritanceTreeAnalyzerTest.cs" />
     <Compile Include="Lcom4AnalyzerTest.cs" />
