Very first implementation of an architecture rule engine

--- a/DependencyParser/DependencyParser.csproj
+++ b/DependencyParser/DependencyParser.csproj
@@ -78,6 +78,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArchitectureRule.cs" />
+    <Compile Include="ArchitectureRuleEngine.cs" />
+    <Compile Include="ArchitectureViolation.cs" />
     <Compile Include="DependencyAnalyzer.cs" />
     <Compile Include="DethOfInheritanceTreeAnalyzer.cs" />
     <Compile Include="Lcom4Analyzer.cs" />
@@ -87,6 +90,7 @@
     <Compile Include="ResponseForClassAnalyzer.cs" />
     <Compile Include="SourceHelper.cs" />
     <Compile Include="SourceRegistry.cs" />
+    <Compile Include="WildcardPatternMatcher.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
