--- a/DependencyParser.Test/DependencyParser.Test.csproj
+++ b/DependencyParser.Test/DependencyParser.Test.csproj
@@ -56,6 +56,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArchitectureRuleEngineTest.cs" />
+    <Compile Include="CecilHelper.cs" />
     <Compile Include="DependencyAnalyzerTest.cs" />
     <Compile Include="DependencyParserTest.cs" />
     <Compile Include="DethOfInheritanceTreeAnalyzerTest.cs" />
@@ -63,6 +65,7 @@
     <Compile Include="DesignMeasuresTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseForClassAnalyzerTest.cs" />
+    <Compile Include="WildcardPatternMatcherTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="lcom4-expected.xml">
@@ -80,6 +83,9 @@
     <Content Include="testdata\test.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
+    </Content>
+    <Content Include="types-merged-expected.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
