--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <visual.studio.solution>DependencyParser.sln</visual.studio.solution>
     <dotnet.tool.version>4.0</dotnet.tool.version>
 	<visual.test.project.pattern>*.Tests;*Test</visual.test.project.pattern>
+	<sonar.language>cs</sonar.language>
+	<sonar.dotnet.assemblies>bin/Debug/$(AssemblyName).$(OutputType)</sonar.dotnet.assemblies>
   </properties>
   <build>
     <plugins>
